--- a/React Native/viaCepProject/package.json
+++ b/React Native/viaCepProject/package.json
@@ -10,15 +10,17 @@
   },
   "dependencies": {
     "@expo-google-fonts/dev": "^0.2.3",
+    "@expo/metro-runtime": "~3.1.1",
+    "axios": "^1.6.7",
     "expo": "~50.0.4",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.10.2",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.9",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "styled-components": "^6.1.8",
     "react-native-web": "~0.19.6",
-    "@expo/metro-runtime": "~3.1.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
