--- a/React Native/vitalHubProject/package.json
+++ b/React Native/vitalHubProject/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/dev": "^0.2.3",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.7",
     "expo": "~50.0.5",
     "expo-app-loading": "^2.1.1",
