--- a/React Native/vitalHubProject/package.json
+++ b/React Native/vitalHubProject/package.json
@@ -19,7 +19,9 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "styled-components": "^6.1.8"
+    "react-native-linear-gradient": "^2.8.3",
+    "styled-components": "^6.1.8",
+    "expo-linear-gradient": "~12.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
