--- a/React Native/vitalHub/package.json
+++ b/React Native/vitalHub/package.json
@@ -36,7 +36,9 @@
     "react-native-svg": "^14.1.0",
     "styled-components": "^6.1.8",
     "expo-location": "~16.5.5",
-    "react-native-maps": "1.10.0"
+    "react-native-maps": "1.10.0",
+    "expo-camera": "~14.1.1",
+    "expo-media-library": "~15.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
