--- a/React Native/vitalHub/app.json
+++ b/React Native/vitalHub/app.json
@@ -4,8 +4,11 @@
     "slug": "vitalHub",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "icon": "./assets/blue-heart.svg",
+    "notification": {
+      "icon": "./assets/blue-heart.svg"
+    },
+    "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "cover",
